# rust-tracer

./: README.md
libs/: Cargo.toml
libs/src/: camera.rs  lib.rs  obj.rs  ray.rs  utils.rs  vec3.rs
main/: Cargo.toml
main/src/: ]  main.rs
