[package]
name = "rustkrab"
version = "0.1.0"
edition = "2021"
[[bin]]
edition = "2021"
name = "m"
path = "src/main.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo = "0.71.0"
derivative = "2.2.0"
min-max = "0.1.8"
rand = "0.8.5"
sdl2 = "0.35.2"
sdl2-sys = "0.35.2"
stuffs = {path= "../libs"}
[profile.release]
codegen-units = 1
lto = "off"
opt-level = 3
incremental = false
rpath = true

